# win-polyfill-phnt

./: .clang-format  CMakeLists.txt  ConIoSrv.h  conapi.h  condrv.h  conmsgl1.h  conmsgl2.h  conmsgl3.h  csrmsg.h  ntcon.h  ntcsrdll.h  ntcsrmsg.h  ntdbg.h  ntexapi.h  ntioapi.h  ntldr.h  ntlsa.h  ntmmapi.h  ntnls.h  ntobapi.h  ntpebteb.h  ntpnpapi.h  ntpoapi.h  ntpsapi.h  ntregapi.h  ntrtl.h  ntsam.h  ntsxs.h  ntwmi.h  phnt.h  phnt_ntdef.h  subprocesstag.h  win-polyfill-arch.h  win-polyfill-ldr-data-table-entry.h  win-polyfill-peb.h  win-polyfill-rtl-user-process-parameters.h  win-polyfill-teb.h  winconp.h
.github/workflows/: windows-msvc.yml
cmake/: CpkHelpers.cmake  CpkRunTest.cmake  extract_win32_api.cmake
docs/: PEB_LDR_DATA_versions.csv  PEB_versions.csv  RTL_USER_PROCESS_PARAMETERS_versions.csv  TEB_versions.csv
tests/: CMakeLists.txt  peb-test.cpp  teb-test.cpp  test-include-ntpebteb.c  test-include-phnt.c  test-main.cpp  test.h  win-polyfill.cpp
